changing about section title padding to fix white space

--- a/styles.css
+++ b/styles.css
@@ -395,7 +395,8 @@ body {
 
 @media only screen and (max-width: 475px) {
   #header {
-    height: 80vh;
+    width: 100%;
+    height: 70vh;
   }
 
   #about {
